# docker_projects

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: cupsd-docker.yml  streamripper-docker.yml  streamripper-next-docker.yml
adguard/: .gitignore  docker-compose.yml
apps/adguard/: README.md  docker-compose.yml  secrets.env
apps/conda-docker/: Dockerfile
apps/docker-pep/syncPEP/: database.db  pyproject.toml
apps/docker-pep/syncPEP/syncpep/: database.py  model.py
apps/docker-swarm/: main.tf  terraform.tfvars.example
apps/mb-system-docker/: Dockerfile
apps/streamripper/: Dockerfile  compose.yaml  cronStreamRipper  startStreamripper.sh
apps/streamripper-next/: .dockerignore  Dockerfile  requirements.txt
apps/ubuntu-dev/: test.py
conda-docker/: docker-compose.yml  environment.yml  run.py
cupsd/: Dockerfile  docker-compose.yml
docker pep/: database.db
docker pep/.devcontainer/: devcontainer.json
docker swarm/: outputs.tf  terraform.tfvars.example  versions.tf
docker-pep/.devcontainer/: devcontainer.json
docker-swarm/: variables.tf
geoserver-docker/: docker-compose.yaml
gmt-docker/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
latex/.devcontainer/: Dockerfile  devcontainer.json
mb-system-docker/: docker-compose.yaml
r_container/.devcontainer/: Dockerfile  devcontainer.json
r_container/data/: hello_world.R
streamripper/: .gitignore  compose.yaml
streamripper-next/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
texlive-test/: Dockerfile
(+21 files in other folders)
