[tool.poetry]
name = "syncpep"
version = "0.1.0"
description = ""
authors = ["Malte Biermann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
sqlmodel = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
